18 August 2023: Wouter
	- Fix for iter_dec_attempts that could cause a hang, part of
	  capsforid and qname minimisation, depending on the settings.
	- Fix uninitialized memory passed in padding bytes of cmsg to sendmsg.

17 August 2023: Wouter
	- Merge PR #762: Downstream DNS Server Cookies a la RFC7873 and
	  RFC9018. Create server cookies for clients that send client cookies.
	  This needs to be explicitly turned on in the config file with:
	  `answer-cookie: yes`. A `cookie-secret:` can be configured for
	  anycast setups. Without one, a random cookie secret is generated.
	  The acl option `allow_cookie` allows queries with either a valid
	  cookie or over a stateful transport. The statistics output has
	  `queries_cookie_valid` and `queries_cookie_client` and
	  `queries_cookie_invalid` information. The `ip\-ratelimit\-cookie:`
	  value determines a rate limit for queries with cookies, if desired.
	- Fix regional_alloc_init for potential unaligned source of the copy.
	- Fix ip_ratelimit test to work with dig that enables DNS cookies.

2 August 2023: George
	- Move a cache reply callback in worker.c closer to the cache reply
	  generation.

1 August 2023: George
	- Merge #911 from natalie-reece: Exclude EDE before other EDNS options
	  when there isn't enough space.
	- For #911: Try to trim EXTRA-TEXT (and LDNS_EDE_OTHER options
	  altogether) before giving up on attaching EDE options.
	- More braces and formatting for Fix for EDNS EDE size calculation to
	  avoid future bugs.
	- Fix to use the now cached EDE, if any, for CD_bit queries.

1 August 2023: Wouter
	- Fix for EDNS EDE size calculation.

31 July 2023: George
	- Merge #790 from Tom Carpay: Add support for EDE caching in cachedb
	  and subnetcache.

31 July 2023: Wouter
	- iana portlist update.

30 July 2023: George
	- Merge #759 from Tom Carpay: Add EDE (RFC8914) caching.

28 July 2023: George
	- Fix unused variable compile warning for kernel timestamps in
	  netevent.c

21 July 2023: George